Fix layout shift caused by SelectionPreview height and ensure stable right column layout

--- a/bene-fa/src/components/subPages/belteriAjto/RightText.css
+++ b/bene-fa/src/components/subPages/belteriAjto/RightText.css
@@ -1,5 +1,5 @@
 .right-text {
-    margin-top: -3.5rem;
+    margin-top: -3rem;
     margin-left: 8rem;
     margin-right: 10rem;
     text-align: justify;
