--- a/bene-fa/src/components/subPages/belteriAjto/SelectionPreview.css
+++ b/bene-fa/src/components/subPages/belteriAjto/SelectionPreview.css
@@ -1,15 +1,17 @@
 .selection-preview {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     gap: 1rem;
-    margin-top: 2rem;
+    margin-top: 0rem;
     margin-left: 8rem;
+
+    height: 9rem;
   }
   
+  
+  
   .preview-image {
-    max-width: 200px;
-    border-radius: 8px;
+    max-width: 4rem;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
   }
   
